2002-04-30  Cristy  <cristy@mystic.es.dupont.com>
  * Subimage specification did not work for TIFF (e.g.
    convert 'image.tiff[1]' image.png).

2002-04-30  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick, version 5.4.5, released.

2002-04-20  Cristy  <cristy@mystic.es.dupont.com>
  * Added magic string detection for the FPX format (patch provided by
    Marc).

2002-04-18  Cristy  <cristy@mystic.es.dupont.com>
  * Added ExceptionInfo parameter to C API method, QueryColorDatabase().

2002-04-17  Leonard Rosenthol  <leonardr@lazerware.com>
  * Fixed all known bugs with the IMDisplay utility for Windows.

2002-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * configure.ac (libtool_build_static_libs): Added
    --enable-delegate-build option to suuport building ImageMagick
    using delegate libraries in subdirectories of the ImageMagick source
    directory.

2002-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * WMF now supplies bitmaps as inline images rather than via a mpri
    reference.

2002-04-15  Cristy  <cristy@mystic.es.dupont.com>
  * Fixed DrawImage() to properly handle affine image transforms.
  * Added AffineTransformImage() to C API.
  * Added -transform option to convert/mogrify program.

2002-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * magick/magick.c (MagickToMime): New method to return the MIME media
    type corresponding to a specified magick tag.

2002-04-12  Leonard Rosenthol  <leonardr@lazerware.com>
  * Fixed a bug in writing layer names in PSD files.

2002-04-10  Cristy  <cristy@mystic.es.dupont.com>
  * Fixed PingImage() memory leak (thanks to Timo Vogel).
  * Added encoding and unicode attributes to PerlMagick (patch provided
    by Youki Kadobayashi).

2002-04-08  Cristy  <cristy@mystic.es.dupont.com>
  * Added reference counted blobs.
  * Added MagickFatalError() and SetFatalErrorHandler() to the C API.
  * One color images caused memory corruption in QuantizeImage() (thanks
    to Vincent Broz).