@@ -1,6 +1,6 @@
 The ImageMagick Studio LLC development group announces the release of
-ImageMagick 5.4.5.  Version 5.4.5 is a feature release but also resolves
-bugs reported against 5.4.4.
+ImageMagick 5.4.6.  Version 5.4.6 is a feature release but also resolves
+bugs reported against 5.4.5.
 
 ImageMagick is a robust collection of tools and libraries to read, write,
 and manipulate an image in many image formats (over 72 major formats)
@@ -30,7 +30,7 @@ for details):
 
     - CCIS-601 4:2:2 YUV and CCIS-601 4:2:2 MPEG-2 format support added.
 
-    - See ImageMagick-5.4.5/ChangeLog for additional changes.
+    - See ImageMagick-5.4.6/ChangeLog for additional changes.
 
   o Utilities enhancements/changes:
 
@@ -61,16 +61,16 @@ for details):
     - Composite images are now inlined in MVG so that MVG files are
       completely stand-alone.
 
-    - See ImageMagick-5.4.5/Magick++/NEWS and
-      ImageMagick-5.4.5/Magick++/ChangeLog for additional changes.
+    - See ImageMagick-5.4.6/Magick++/NEWS and
+      ImageMagick-5.4.6/Magick++/ChangeLog for additional changes.
 
 The ImageMagick WWW page is
 
   http://www.imagemagick.org/
  
-ImageMagick 5.4.5 is available via ftp as
+ImageMagick 5.4.6 is available via ftp as
 
-  ftp://ftp.imagemagick.org/pub/ImageMagick/ImageMagick-5.4.5.tar.gz
+  ftp://ftp.imagemagick.org/pub/ImageMagick/ImageMagick-5.4.6.tar.gz
 
 If ftp.imagemagick.org is overloaded, check the list of mirrors at
 http://www.imagemagick.org/www/archives.html for other mirrors.
