@@ -36,12 +36,12 @@ Unix/Linux/Darwin/Cygwin Install:
 
   Download
 
-      ftp://ftp.imagemagick.org/pub/ImageMagick/ImageMagick-5.4.5.tar.gz
+      ftp://ftp.imagemagick.org/pub/ImageMagick/ImageMagick-5.4.6.tar.gz
 
   and type
 
-      gunzip -c ImageMagick-5.4.5.tar.gz | tar xvf -
-      cd ImageMagick-5.4.5
+      gunzip -c ImageMagick-5.4.6.tar.gz | tar xvf -
+      cd ImageMagick-5.4.6
       ./configure -prefix=/usr/local
       make
       make install
@@ -85,7 +85,7 @@ Win2K, WinME, NT, Win98, Win95 Install:
 
   Alternatively, download the ImageMagick Win2K source
 
-      ftp://ftp.imagemagick.org/pub/ImageMagick/win2k/ImageMagick-5.4.5.zip
+      ftp://ftp.imagemagick.org/pub/ImageMagick/win2k/ImageMagick-5.4.6.zip
 
   and read README.txt for detailed instructions on compiling the ImageMagick
   source.
@@ -107,7 +107,7 @@ MAC Install:
 
   Alternatively, download the ImageMagick Classic Macintosh source
 
-      ftp://ftp.imagemagick.org/pub/ImageMagick/mac/ImageMagick-5.4.5.sit
+      ftp://ftp.imagemagick.org/pub/ImageMagick/mac/ImageMagick-5.4.6.sit
 
   and double click on the Make AppleScript script to build from the source.
 
@@ -116,7 +116,7 @@ VMS Install:
 
   Type
 
-      unzip ImageMagick-5.4.5.zip
+      unzip ImageMagick-5.4.6.zip
       set default [.imagemagick]
       @make
       identify -verbose logo:
