@@ -9,7 +9,7 @@ AC_INIT(magick/magick.h)
 # Set version
 MAJOR_VERSION=5
 MINOR_VERSION=4
-MICRO_VERSION=5
+MICRO_VERSION=6
 echo "configuring ImageMagick $MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION"
 AC_CANONICAL_SYSTEM
 AC_SUBST(MAJOR_VERSION)dnl
