@@ -23,6 +23,16 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-05-05  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * ImageMagick, version 5.4.5-1 released.
+
+2002-04-30  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Subimage specification did not work for TIFF (e.g.
+    convert 'image.tiff[1]' image.png).
+
+2002-04-30  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * ImageMagick, version 5.4.5 released.
+
 2002-04-20  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Added magic string detection for the FPX format (patch provided by
     Marc).
