@@ -41,7 +41,7 @@
 <FONT SIZE=-1>SYNOPSIS</FONT></A></H1>
 <P>Image * <STRONG>MagnifyImage</STRONG>( const Image *image, ExceptionInfo *exception );</P>
 <P>Image * <STRONG>MinifyImage</STRONG>( const Image *image, ExceptionInfo *exception );</P>
-<P>Image * <STRONG>ResizeImage</STRONG>( Image *image, const unsigned long columns, const unsigned long rows, const FilterType filter, const double blur, ExceptionInfo *exception );</P>
+<P>Image * <STRONG>ResizeImage</STRONG>( Image *image, const unsigned long columns, const unsigned long rows, const FilterTypes filter, const double blur, ExceptionInfo *exception );</P>
 <P>Image * <STRONG>SampleImage</STRONG>( const Image *image, const unsigned long columns, const unsigned long rows, ExceptionInfo *exception );</P>
 <P>Image * <STRONG>ScaleImage</STRONG>( const Image *image, const unsigned long columns, const unsigned long rows, ExceptionInfo *exception );</P>
 <P>
@@ -89,7 +89,7 @@ Return any errors or warnings in this structure.
 <FONT SIZE=-1>FIR</FONT> (finite impulse response), however, Bessel, Gaussian, and Sinc are 
 <FONT SIZE=-1>IIR</FONT> (infinite impulse response). Bessel and Sinc are windowed (brought down to zero) with the Blackman filter.</P>
 <blockquote>ResizeImage() was inspired by Paul Heckbert's zoom program. </blockquote><P>The format of the ResizeImage method is:</P>
-<blockquote><A HREF="types/Image.html">Image</A> *ResizeImage ( <A HREF="types/Image.html">Image</A> *image, const unsigned long columns, const unsigned long rows, const FilterType filter, const double blur, <A HREF="types/ExceptionInfo.html">ExceptionInfo</A> *exception ); </blockquote><P>
+<blockquote><A HREF="types/Image.html">Image</A> *ResizeImage ( <A HREF="types/Image.html">Image</A> *image, const unsigned long columns, const unsigned long rows, const <A HREF="types/Enumerations.html#FilterTypes">FilterTypes</A> filter, const double blur, <A HREF="types/ExceptionInfo.html">ExceptionInfo</A> *exception ); </blockquote><P>
 <FONT SIZE=-1>A</FONT> description of each parameter follows:</P>
 <DL><DT><DD><DL>
 <dd><p></p><dt><STRONG>image:</STRONG><BR>
