@@ -1,9 +1,12 @@
+2002-05-05  Cristy  <cristy@mystic.es.dupont.com>
+  * ImageMagick, version 5.4.5-1 released.
+
 2002-04-30  Cristy  <cristy@mystic.es.dupont.com>
   * Subimage specification did not work for TIFF (e.g.
     convert 'image.tiff[1]' image.png).
 
 2002-04-30  Cristy  <cristy@mystic.es.dupont.com>
-  * ImageMagick, version 5.4.5, released.
+  * ImageMagick, version 5.4.5 released.
 
 2002-04-20  Cristy  <cristy@mystic.es.dupont.com>
   * Added magic string detection for the FPX format (patch provided by
